# cargo-tako

./: Cargo.toml  LICENSE  README.md
src/: config.rs  error.rs  main.rs  template.rs  toolchain.rs  util.rs
src/commands/: build.rs  init.rs  mod.rs  test.rs
templates/default/: README.md.template  lib.rs.template
templates/empty/: Cargo.toml.template  README.md.template  lib.rs.template
templates/erc20/: README.md.template  lib.rs.template
templates/erc721/: README.md.template  lib.rs.template
