[package]
name = "cargo-tako"
version = "0.3.1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/tos-network/cargo-tako"
authors = ["TOS Network <dev@tos.network>"]
description = "Command-line tool for developing TAKO smart contracts"
readme = "README.md"
keywords = ["tako", "tos", "smart-contract", "blockchain", "ebpf"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[[bin]]
name = "cargo-tako"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File operations
walkdir = "2.4"

# Terminal UI
colored = "2.1"

# Process execution
which = "6.0"

[profile.release]
opt-level = 3
lto = true
